--- a/css/main.css
+++ b/css/main.css
@@ -189,8 +189,8 @@ width: 77%;
     height: 50px;
     overflow: hidden;
     position: absolute;
-    left: 75px;
-    top: 75px;
+     left: 60px;
+    top: -8px;
 }
 .home ul li{
     list-style: none;
@@ -598,6 +598,7 @@ width: 100%;
       width: 100%;
       height: 280vh !important;
       transform: translateY(8%);
+       margin-bottom: 200px;
   }
   .port{
     margin: 30px 0 !important;
